# feishu-relay-bot

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: DEPLOY.md  QUICKSTART.md
feishu_relay_bot/: __init__.py  bot.py  config.py  ctrl.py  heartbeat.py  manager.py  models.py  relay_codec.py  upgrade.py
feishu_relay_bot/upstream/: __init__.py
tests/: test_config.py  test_relay_codec.py  test_relay_protocol.py
